--- a/requirements/windows/requirements.txt
+++ b/requirements/windows/requirements.txt
@@ -2,134 +2,133 @@
 # Please do not edit it manually.
 
 aicsimageio==4.14.0
-aiohappyeyeballs==2.4.3
-aiohttp==3.10.10
-aiosignal==1.3.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 alabaster==0.7.16
 annotated-types==0.7.0
-appdirs==1.4.4
 asciitree==0.3.3
-asttokens==2.4.1
-async-timeout==4.0.3; python_version < "3.11"
-attrs==24.2.0
+asttokens==3.0.0
+async-timeout==5.0.1; python_version < "3.11"
+attrs==24.3.0
 babel==2.16.0
-black==22.12.0
-boto3==1.35.42
-botocore==1.35.42
-bump2version==1.0.1
-cachecontrol==0.14.0
+black==24.10.0
+boto3==1.35.98
+botocore==1.35.98
+bumpver==2024.1130
+cachecontrol==0.14.2
 cachetools==5.5.0
-certifi==2024.8.30
+certifi==2024.12.14
 cffi==1.17.1
 chardet==5.2.0
-charset-normalizer==3.4.0
-click==8.1.7
+charset-normalizer==3.4.1
+click==8.1.8
 cloudpickle==3.1.0
 colorama==0.4.6
 contourpy==1.3.0
-coverage[toml]==7.6.3
-cryptography==43.0.1
+coverage[toml]==7.6.10
+cryptography==43.0.3
 cycler==0.12.1
 dask[array]==2024.8.0
 decorator==5.1.1
-deepdiff==8.0.1
+deepdiff==8.1.1
 distlib==0.3.9
 distributed==2024.8.0
-docutils==0.21.2
-elementpath==4.5.0
+docutils==0.20.1
+elementpath==4.7.0
 exceptiongroup==1.2.2; python_version < "3.11"
 executing==2.1.0
 fasteners==0.19
 filelock==3.16.1
 fire==0.7.0
-firebase-admin==6.5.0
-flake8==6.0.0
+firebase-admin==6.6.0
+flake8==7.1.1
 flake8-debugger==4.1.2
 flexcache==0.3
-flexparser==0.3.1
-fonttools==4.54.1
-frozenlist==1.4.1
+flexparser==0.4
+fonttools==4.55.3
+frozenlist==1.5.0
 fsspec[s3]==2023.6.0
-google-api-core[grpc]==2.21.0; platform_python_implementation != "PyPy"
-google-api-python-client==2.149.0
-google-auth==2.35.0
+google-api-core[grpc]==2.24.0; platform_python_implementation != "PyPy"
+google-api-python-client==2.158.0
+google-auth==2.37.0
 google-auth-httplib2==0.2.0
 google-cloud-core==2.4.1
 google-cloud-firestore==2.19.0; platform_python_implementation != "PyPy"
-google-cloud-storage==2.18.2
+google-cloud-storage==2.19.0
 google-crc32c==1.6.0
 google-resumable-media==2.7.2
-googleapis-common-protos==1.65.0
-grpcio==1.67.0; platform_python_implementation != "PyPy"
-grpcio-status==1.67.0; platform_python_implementation != "PyPy"
+googleapis-common-protos==1.66.0
+grpcio==1.69.0; platform_python_implementation != "PyPy"
+grpcio-status==1.69.0; platform_python_implementation != "PyPy"
 httplib2==0.22.0
 idna==3.10
-imagecodecs==2024.9.22
-imageio==2.36.0
+imagecodecs==2024.12.30
+imageio==2.36.1
 imagesize==1.4.1
 importlib-metadata==8.5.0; python_version < "3.12"
-importlib-resources==6.4.5; python_version < "3.10"
+importlib-resources==6.5.2; python_version < "3.10"
 iniconfig==2.0.0
 ipython==8.18.1
-jedi==0.19.1
-jinja2==3.1.4
+jedi==0.19.2
+jinja2==3.1.5
 jmespath==1.0.1
-joblib==1.4.2
 kiwisolver==1.4.7
 lazy-loader==0.4
+lexid==2021.1006
 locket==1.0.0
 lxml==4.9.4
 m2r2==0.3.3.post2
-markupsafe==3.0.1
-matplotlib==3.9.2
+markupsafe==3.0.2
+matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdutils==1.6.0
 mistune==0.8.4
-moto==5.0.17
+moto==5.0.26
 msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 networkx==3.2.1
 numcodecs==0.12.1
 numpy==2.0.2
-ome-types==0.5.2
-ome-zarr==0.9.0
-orderly-set==5.2.2
-packaging==24.1
+ome-types==0.5.3
+ome-zarr==0.10.2
+orderly-set==5.2.3
+packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 partd==1.4.2
 pathspec==0.12.1
 pexpect==4.9.0; sys_platform != "win32"
-pillow==11.0.0
-pint==0.24.3
+pillow==11.1.0
+pint==0.24.4
 platformdirs==4.3.6
 plotly==5.24.1
 pluggy==1.5.0
 prompt-toolkit==3.0.48
-propcache==0.2.0
-proto-plus==1.24.0
-protobuf==5.28.2
-psutil==6.0.0
+propcache==0.2.1
+proto-plus==1.25.0
+protobuf==5.29.3
+psutil==6.1.1
 ptyprocess==0.7.0; sys_platform != "win32"
 pure-eval==0.2.3
 pyasn1==0.6.1
 pyasn1-modules==0.4.1
-pycodestyle==2.10.0
+pycodestyle==2.12.1
 pycollada==0.8
 pycparser==2.22
-pydantic==2.9.2
+pydantic==2.10.5
 pydantic-compat==0.1.2
-pydantic-core==2.23.4
-pyflakes==3.0.1
-pygments==2.18.0
-pyjwt[crypto]==2.9.0
-pymunk==6.9.0
-pyparsing==3.2.0
+pydantic-core==2.27.2
+pyflakes==3.2.0
+pygments==2.19.1
+pyjwt[crypto]==2.10.1
+pymunk==6.10.0
+pyparsing==3.2.1
 pyproject-api==1.8.0
-pytest==8.3.3
-pytest-cov==5.0.0
+pytest==8.3.4
+pytest-cov==6.0.0
 pytest-raises==0.11
 pytest-runner==6.0.1
 python-dateutil==2.9.0.post0
@@ -138,21 +137,19 @@ pytz==2024.2
 pyyaml==6.0.2
 requests==2.32.3
 resource-backed-dask-array==0.1.0
-responses==0.25.3
+responses==0.25.5
 rsa==4.9
 rtree==1.3.0
 s3fs==0.4.2
-s3transfer==0.10.3
+s3transfer==0.10.4
 scikit-image==0.24.0
-scikit-learn==1.5.2
 scipy==1.13.1
-seaborn==0.13.2
 simulariumio==1.11.0
-six==1.16.0
+six==1.17.0
 snowballstemmer==2.2.0
 sortedcontainers==2.4.0
 sphinx==7.4.7
-sphinx-rtd-theme==3.0.1
+sphinx-rtd-theme==3.0.2
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
@@ -164,30 +161,30 @@ stack-data==0.6.3
 tblib==3.0.0
 tenacity==9.0.0
 termcolor==2.5.0
-threadpoolctl==3.5.0
 tifffile==2023.2.28
-tomli==2.0.2; python_version < "3.11"
+toml==0.10.2
+tomli==2.2.1; python_version < "3.11"
 toolz==1.0.0
-tornado==6.4.1
-tox==4.23.0
+tornado==6.4.2
+tox==4.23.2
 tox-pdm==0.7.2
-tqdm==4.66.5
+tqdm==4.67.1
 traitlets==5.14.3
-trimesh==4.5.0
+trimesh==4.5.3
 typing-extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==1.26.20
-virtualenv==20.26.6
+virtualenv==20.28.1
 wcwidth==0.2.13
-werkzeug==3.0.4
-wheel==0.44.0
-wrapt==1.16.0
+werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.1
 xarray==2024.7.0
-xmlschema==3.4.2
+xmlschema==3.4.3
 xmltodict==0.14.2
 xsdata==24.3.1
-yarl==1.15.4
+yarl==1.18.3
 zarr==2.15.0
 zict==3.0.0
-zipp==3.20.2; python_version < "3.12"
+zipp==3.21.0; python_version < "3.12"
