--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,24 +19,24 @@ classifiers = [
 requires-python = "!=3.9.1,<3.10.0,>3.9.0"
 dependencies = [
     "aicsimageio>=4.14.0",
-    "boto3>=1.35.98",
-    "deepdiff>=8.1.1",
-    "fire>=0.7.0",
-    "firebase-admin>=6.6.0",
+    "boto3>=1.40.14",
+    "deepdiff>=8.6.0",
+    "fire>=0.7.1",
+    "firebase-admin>=7.1.0",
     "matplotlib>=3.9.4",
-    "mdutils>=1.6.0",
-    "moto>=5.0.26",
-    "numpy<2.0",
-    "plotly>=5.24.1",
-    "pycollada>=0.8",
-    "pymunk>=6.10.0",
-    "python-dotenv>=1.0.1",
-    "rtree>=1.3.0",
+    "mdutils>=1.8.0",
+    "moto>=5.1.10",
+    "numpy>=2.0.2",
+    "plotly>=6.3.0",
+    "pycollada>=0.9.2",
+    "pymunk>=7.1.0",
+    "python-dotenv>=1.1.1",
+    "rtree>=1.4.1",
     "scipy>=1.13.1",
     "simulariumio>=1.13.0",
     "tqdm>=4.67.1",
-    "trimesh>=4.5.3",
-    "grpcio==1.67.1",
+    "trimesh>=4.7.4",
+    "grpcio>=1.74.0",
 ]
 license = {text = "MIT license"}
 
@@ -53,26 +53,30 @@ clean = "cellpack.bin.clean:main"
 [dependency-groups]
 dev = [
     "Sphinx>=7.4.7",
-    "coverage>=7.6.10",
+    "coverage>=7.10.4",
     "ipython>=8.18.1",
     "sphinx-rtd-theme>=3.0.2",
-    "tox>=4.23.2",
+    "tox>=4.27.0",
     "wheel>=0.45.1",
     "tox-pdm>=0.7.2",
-    "bumpver>=2024.1130",
-    "docutils<0.21,>=0.18.1",
-    "ipykernel>=6.30.0",
+    "bumpver>=2025.1131",
+    "docutils>=0.21.2",
+    "ipykernel>=6.30.1",
 ]
 setup = [
     "pytest-runner>=6.0.1",
-    "setuptools>=75.8.0",
+    "setuptools>=80.9.0",
 ]
-test = ["pytest-cov>=6.0.0", "pytest-raises>=0.11", "pytest>=8.3.4"]
+test = [
+    "pytest-cov>=6.2.1",
+    "pytest-raises>=0.11",
+    "pytest>=8.4.1",
+]
 lint = [
-    "black>=24.10.0",
+    "black>=25.1.0",
     "flake8-debugger>=4.1.2",
-    "flake8>=7.1.1",
-    "docutils<0.21,>=0.18.1",
+    "flake8>=7.3.0",
+    "docutils>=0.21.2",
 ]
 docs = [
     "linkify-it-py>=2.0.3",
