--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -24,6 +24,11 @@ jobs:
 
     - uses: ./.github/actions/dependencies
 
+    - name: Test token access
+      run: |
+        echo "Token exists: ${{ secrets.GITHUB_TOKEN != '' }}"
+        # Note: The actual token value is masked in logs for security
+
     - name: Setup Pages
       uses: actions/configure-pages@v5
 
@@ -33,23 +38,9 @@ jobs:
         touch docs/_build/html/.nojekyll
     
     - name: Upload artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-pages-artifact@v3
       with:
         path: docs/_build/html/
-  
-  test-deploy:
-    needs: docs
-    runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/main'
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: github-pages
-      - name: Extract and validate
-        run: |
-          tar -tf artifact.tar | head -10
-          echo "Artifact validation complete"
   
   deploy:
     needs: docs
