--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "matplotlib>=3.9.4",
     "mdutils>=1.8.0",
     "moto>=5.1.10",
-    "numpy>=2.0.2",
+    "numpy<2.0",
     "plotly>=6.3.0",
     "pycollada>=0.9.2",
     "pymunk>=7.1.0",
