--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,17 @@ classifiers = [
 requires-python = ">=3.11"
 dependencies = [
     "aicsimageio>=4.14.0",
-    "boto3>=1.40.14",
+    "boto3>=1.40.19",
     "deepdiff>=8.6.0",
     "fire>=0.7.1",
     "firebase-admin>=7.1.0",
+    "grpcio>=1.74.0",
+    "ipykernel>=6.30.1",
     "matplotlib>=3.10.5",
     "mdutils>=1.8.0",
-    "moto>=5.1.10",
+    "moto>=5.1.11",
     "numpy>=2.3.2",
+    "pandas>=2.3.2",
     "plotly>=6.3.0",
     "pycollada>=0.9.2",
     "pymunk>=7.1.0",
@@ -36,7 +39,6 @@ dependencies = [
     "simulariumio>=1.13.0",
     "tqdm>=4.67.1",
     "trimesh>=4.7.4",
-    "grpcio>=1.74.0",
 ]
 license = {text = "MIT license"}
 
@@ -53,7 +55,7 @@ clean = "cellpack.bin.clean:main"
 [dependency-groups]
 dev = [
     "Sphinx>=8.2.3",
-    "coverage>=7.10.4",
+    "coverage>=7.10.5",
     "ipython>=9.4.0",
     "sphinx-rtd-theme>=3.0.2",
     "tox>=4.27.0",
