--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Natural Language :: English",
     "Programming Language :: Python :: 3.9",
 ]
-requires-python = ">=3.11"
+requires-python = "~=3.11"
 dependencies = [
     "aicsimageio>=4.14.0",
     "boto3>=1.40.19",
