--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -32,6 +32,7 @@ jobs:
         touch docs/_build/html/.nojekyll
     
     - name: Upload artifact
+      id: deployment
       uses: actions/upload-pages-artifact@v3
       with:
         path: docs/_build/html/
