Export requirements files without hashes to allow editable installs

--- a/.github/workflows/make-requirements.yml
+++ b/.github/workflows/make-requirements.yml
@@ -37,7 +37,7 @@ jobs:
 
           rm -rf requirements/*
           mkdir -p requirements/$PLATFORM
-          uv export --format requirements-txt --output-file requirements/$PLATFORM/requirements.txt
+          uv export --no-hashes --format requirements-txt --output-file requirements/$PLATFORM/requirements.txt
 
       - name: Get platform variable
         id: platform
