--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ classifiers = [
 ]
 requires-python = "~=3.11.0"
 dependencies = [
-    "aicsimageio",
+    "bioio>=3.0.0",
+    "bioio-ome-tiff>=1.4.0",
     "boto3",
-    "deepdiff",
     "fire",
     "firebase-admin",
     "grpcio",
