--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -56,18 +56,25 @@ jobs:
                   path: ./results
             - name: Copy files to results bucket
               run: aws s3 cp ./results s3://cellpack-results/${{  github.ref_name  }}/ --recursive --acl public-read
-            - uses: iterative/setup-cml@v2
-            - name: Update comment for dependabot
-              if: ${{ github.actor == 'dependabot[bot]' }}
+            - name: Update or create PR comment
+              if: ${{ github.event_name == 'pull_request' }}
               env:
-                  REPO_TOKEN: ${{ secrets.DEPENDABOT_TOKEN }}
+                  GH_TOKEN: ${{ github.actor == 'dependabot[bot]' && secrets.DEPENDABOT_TOKEN || secrets.GITHUB_TOKEN }}
               run: |
-                  cml comment update --watermark-title="{workflow} report" ./results/analysis_report.md --target=pr
-                  cat ./results/analysis_report.md
-            - name: Update comment for PR
-              if: ${{ github.actor != 'dependabot[bot]' }}
-              env:
-                  REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
-                  cml comment update --watermark-title="{workflow} report" ./results/analysis_report.md --target=pr
+                  # Create comment body with watermark
+                  echo "<!-- Analyze workflow report -->" > comment.md
+                  echo "## Analyze Workflow Report" >> comment.md
+                  cat ./results/analysis_report.md >> comment.md
+                  
+                  # Try to find existing comment with watermark and update it
+                  COMMENT_ID=$(gh pr view ${{ github.event.pull_request.number }} --json comments --jq '.comments[] | select(.body | contains("<!-- Analyze workflow report -->")) | .id' | head -n1)
+                  
+                  if [ -n "$COMMENT_ID" ]; then
+                    echo "Updating existing comment ID: $COMMENT_ID"
+                    gh api repos/${{ github.repository }}/issues/comments/$COMMENT_ID -X PATCH -f body="$(cat comment.md)"
+                  else
+                    echo "Creating new comment"
+                    gh pr comment ${{ github.event.pull_request.number }} --body-file comment.md
+                  fi
+                  
                   cat ./results/analysis_report.md
