--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             - main
-            - test/workflow
+            - test/local-workflow
     pull_request:
     workflow_dispatch:
 
