--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -63,8 +63,8 @@ jobs:
               run: |
                   MARKER="<!-- Analyze workflow report -->"
                   COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
-                  EXISTING_COMMENT_ID=$(gh pr view ${{ github.event.pull_request.number }} --json comments --jq ".comments[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
-                  if [ ! -z "$EXISTING_COMMENT_ID" ]; then
+                  EXISTING_COMMENT_ID=$(gh pr view ${{ github.event.pull_request.number }} --json comments --jq ".comments[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1 | tr -d '[:space:]')
+                  if [ -n "$EXISTING_COMMENT_ID" ] && [ "$EXISTING_COMMENT_ID" -eq "$EXISTING_COMMENT_ID" ] 2>/dev/null; then
                     gh api -X DELETE /repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID
                   fi
                   echo -e "$COMMENT_BODY" | gh pr comment ${{ github.event.pull_request.number }} --body-file -
@@ -76,8 +76,8 @@ jobs:
               run: |
                   MARKER="<!-- Analyze workflow report -->"
                   COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
-                  EXISTING_COMMENT_ID=$(gh pr view ${{ github.event.pull_request.number }} --json comments --jq ".comments[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
-                  if [ ! -z "$EXISTING_COMMENT_ID" ]; then
+                  EXISTING_COMMENT_ID=$(gh pr view ${{ github.event.pull_request.number }} --json comments --jq ".comments[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1 | tr -d '[:space:]')
+                  if [ -n "$EXISTING_COMMENT_ID" ] && [ "$EXISTING_COMMENT_ID" -eq "$EXISTING_COMMENT_ID" ] 2>/dev/null; then
                     gh api -X DELETE /repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID
                   fi
                   echo -e "$COMMENT_BODY" | gh pr comment ${{ github.event.pull_request.number }} --body-file -
