--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -63,10 +63,11 @@ jobs:
               run: |
                   MARKER="<!-- Analyze workflow report -->"
                   COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
-                  EXISTING_COMMENT_ID=$(gh pr view ${{ github.event.pull_request.number }} --json comments --jq ".comments[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
-                  if [ ! -z "$EXISTING_COMMENT_ID" ]; then
-                    gh api -X DELETE /repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID
-                  fi
+                  EXISTING_COMMENT_ID=$(gh api \ "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" \--jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" \ head -1)
+                    if [ -n "$EXISTING_COMMENT_ID" ]; then
+                      echo "Deleting existing comment with ID: $EXISTING_COMMENT_ID"
+                      gh api -X DELETE "/repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID"
+                    fi
                   echo -e "$COMMENT_BODY" | gh pr comment ${{ github.event.pull_request.number }} --body-file -
                   cat ./results/analysis_report.md
             - name: Update comment for PR
@@ -76,9 +77,10 @@ jobs:
               run: |
                   MARKER="<!-- Analyze workflow report -->"
                   COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
-                  EXISTING_COMMENT_ID=$(gh pr view ${{ github.event.pull_request.number }} --json comments --jq ".comments[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
-                  if [ ! -z "$EXISTING_COMMENT_ID" ]; then
-                    gh api -X DELETE /repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID
+                  EXISTING_COMMENT_ID=$(gh api \ "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" \ --jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" \ head -1)
+                  if [ -n "$EXISTING_COMMENT_ID" ]; then
+                    echo "Deleting existing comment with ID: $EXISTING_COMMENT_ID"
+                    gh api -X DELETE "/repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID"
                   fi
                   echo -e "$COMMENT_BODY" | gh pr comment ${{ github.event.pull_request.number }} --body-file -
                   cat ./results/analysis_report.md
