--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -63,7 +63,7 @@ jobs:
               run: |
                   MARKER="<!-- Analyze workflow report -->"
                   COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
-                  EXISTING_COMMENT_ID=$(gh api \ "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" \--jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" \ head -1)
+                  EXISTING_COMMENT_ID=$(gh api "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" --jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
                     if [ -n "$EXISTING_COMMENT_ID" ]; then
                       echo "Deleting existing comment with ID: $EXISTING_COMMENT_ID"
                       gh api -X DELETE "/repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID"
@@ -77,7 +77,7 @@ jobs:
               run: |
                   MARKER="<!-- Analyze workflow report -->"
                   COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
-                  EXISTING_COMMENT_ID=$(gh api \ "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" \ --jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" \ head -1)
+                  EXISTING_COMMENT_ID=$(gh api "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" --jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
                   if [ -n "$EXISTING_COMMENT_ID" ]; then
                     echo "Deleting existing comment with ID: $EXISTING_COMMENT_ID"
                     gh api -X DELETE "/repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID"
