--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -65,10 +65,12 @@ jobs:
                   COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
                   EXISTING_COMMENT_ID=$(gh api "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" --jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
                     if [ -n "$EXISTING_COMMENT_ID" ]; then
-                      echo "Deleting existing comment with ID: $EXISTING_COMMENT_ID"
-                      gh api -X DELETE "/repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID"
+                      echo "Updating existing comment with ID: $EXISTING_COMMENT_ID"
+                      echo "$COMMENT_BODY" | gh api -X PATCH "/repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID" -F body=@-
+                    else
+                      echo "Creating new comment"
+                      echo "$COMMENT_BODY" | gh pr comment ${{ github.event.pull_request.number }} --body-file -
                     fi
-                  echo -e "$COMMENT_BODY" | gh pr comment ${{ github.event.pull_request.number }} --body-file -
                   cat ./results/analysis_report.md
             - name: Update comment for PR
               if: ${{ github.event_name == 'pull_request' && github.actor != 'dependabot[bot]' }}
@@ -79,8 +81,10 @@ jobs:
                   COMMENT_BODY="${MARKER}\n$(cat ./results/analysis_report.md)"
                   EXISTING_COMMENT_ID=$(gh api "/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments" --jq ".[] | select(.body | contains(\"${MARKER}\")) | .id" | head -1)
                   if [ -n "$EXISTING_COMMENT_ID" ]; then
-                    echo "Deleting existing comment with ID: $EXISTING_COMMENT_ID"
-                    gh api -X DELETE "/repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID"
+                    echo "Updating existing comment with ID: $EXISTING_COMMENT_ID"
+                    echo "$COMMENT_BODY" | gh api -X PATCH "/repos/${{ github.repository }}/issues/comments/$EXISTING_COMMENT_ID" -F body=@-
+                  else
+                    echo "Creating new comment"
+                    echo "$COMMENT_BODY" | gh pr comment ${{ github.event.pull_request.number }} --body-file -
                   fi
-                  echo -e "$COMMENT_BODY" | gh pr comment ${{ github.event.pull_request.number }} --body-file -
                   cat ./results/analysis_report.md
